--- a/fruits_shop_25/pom.xml
+++ b/fruits_shop_25/pom.xml
@@ -49,6 +49,19 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.31</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.apache.commons</groupId>-->
+<!--            <artifactId>commons-dbcp2</artifactId>-->
+<!--            <version>2.11.0</version>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
